objects/Sales_Order__c/Sales_Order__c.object-meta.xml
<CustomObject>
    <label>Quote/Order</label>
    <nameField>
        <label>No.</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Quotes/Orders</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>