objects/Sales_Order__c/fields/Account_Executives__c.field-meta.xml
<CustomField>
    <fullName>Account_Executives__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account Executive</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Salesperson__c.Account_Executive__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Salesperson__c</referenceTo>
    <relationshipLabel>Quotes/Orders (Account Executive)</relationshipLabel>
    <relationshipName>Sales_Orders_AE</relationshipName>
    <type>Lookup</type>
</CustomField>