objects/Sales_Order__c/fields/Account_PC__c.field-meta.xml
<CustomField>
    <fullName>Account_PC__c</fullName>
    <formula>Bill_to_Customer_No__r.Salesperson__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account PC</label>
    <type>Text</type>
</CustomField>