objects/Sales_Order__c/fields/Allow_Convert__c.field-meta.xml
<CustomField>
    <fullName>Allow_Convert__c</fullName>
    <formula>IF((Convert_Count__c &gt; 0 &amp;&amp; ISPICKVAL(Quote_Type__c, 'One_Time'))||(TODAY() &gt; Expiration_Date__c &amp;&amp; ISPICKVAL(Quote_Type__c, 'Recurrence')) || ISBLANK(TEXT( Quote_Type__c )) , false, true)</formula>
    <label>Allow Convert</label>
    <type>Checkbox</type>
</CustomField>