objects/Sales_Order__c/fields/Allow_Edit__c.field-meta.xml
<CustomField>
    <fullName>Allow_Edit__c</fullName>
    <formula>IF(Service_Center__r.Prevent_New_and_Cloned_Sales_Orders__c == TRUE,
IF((TEXT(Document_Type__c) == 'Sales Quote' &amp;&amp; Convert_Count__c &gt; 0), FALSE, IF(TEXT(Document_Type__c) == 'Sales Order', FALSE, TRUE)),
TRUE)</formula>
    <label>Allow Edit</label>
    <type>Checkbox</type>
</CustomField>