objects/Sales_Order__c/fields/Alternate_Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Alternate_Site_Address__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Site Address</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Site_Address__c.Customer__c</field>
            <operation>equals</operation>
            <valueField>$Source.Bill_to_Customer_No__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Site_Address__c</referenceTo>
    <relationshipLabel>Quotes/Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>