objects/Sales_Order__c/fields/Any_Deviations__c.field-meta.xml
<CustomField>
    <fullName>Any_Deviations__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Any Deviations</label>
    <type>Checkbox</type>
</CustomField>