objects/Sales_Order__c/fields/Applicable_Taxes__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Taxes__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Applicable Taxes</label>
    <type>Checkbox</type>
</CustomField>