objects/Sales_Order__c/fields/Applicable_Taxes_Quote__c.field-meta.xml
<CustomField>
    <fullName>Applicable_Taxes_Quote__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Applicable Taxes Quote</label>
    <type>Checkbox</type>
</CustomField>