objects/Sales_Order__c/fields/Approval_Step_Completed__c.field-meta.xml
<CustomField>
    <fullName>Approval_Step_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Step Completed</label>
    <type>Checkbox</type>
</CustomField>