objects/Sales_Order__c/fields/Approved_Quote_Profit__c.field-meta.xml
<CustomField>
    <fullName>Approved_Quote_Profit__c</fullName>
    <formula>From_Sales_Quote__r.Approved_Profit_Margin__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approved Quote Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>