objects/Sales_Order__c/fields/Auto_Get_Next_Approver__c.field-meta.xml
<CustomField>
    <fullName>Auto_Get_Next_Approver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Get Next Approver</label>
    <type>Checkbox</type>
</CustomField>