objects/Sales_Order__c/fields/Bill_to_Contact__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill-to Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Bill_to_Customer_No__c</field>
            <operation>equals</operation>
            <valueField>Contact.AccountId</valueField>
        </filterItems>
        <filterItems>
            <field>Contact.Account.Contact_Type_Filter__c</field>
            <operation>notEqual</operation>
            <value>Inactive</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Quotes/Orders (Bill-to Contact)</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>