objects/Sales_Order__c/fields/Bill_To_Contacts__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Contacts__c</fullName>
    <label>Bill-To Contacts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>