objects/Sales_Order__c/fields/Bill_To_Contacts_Link__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Contacts_Link__c</fullName>
    <description>This field is used to show hyperlink for multiple Bill_To_Contacts Id</description>
    <label>Bill-To Contacts</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>