objects/Sales_Order__c/fields/Bill_to_Customer_No__c.field-meta.xml
<CustomField>
    <fullName>Bill_to_Customer_No__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Bill-to Customer</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Account.Type</field>
            <operation>equals</operation>
            <value>Prospect, Customer</value>
        </filterItems>
        <filterItems>
            <field>Account.Subsidiary_Company__c</field>
            <operation>equals</operation>
            <valueField>$Source.Subsidiary_Company__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>