objects/Sales_Order__c/fields/Billing_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Billing_Instructions__c</fullName>
    <label>Additional Billing Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>