objects/Sales_Order__c/fields/Billing_Owner__c.field-meta.xml
<CustomField>
    <fullName>Billing_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Owner</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>