objects/Sales_Order__c/fields/Billing_Rule_Not_Required__c.field-meta.xml
<CustomField>
    <fullName>Billing_Rule_Not_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Billing Rule Not Required</label>
    <type>Checkbox</type>
</CustomField>