objects/Sales_Order__c/fields/Characterization_Of_Waste__c.field-meta.xml
<CustomField>
    <fullName>Characterization_Of_Waste__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Characterization Of Waste</label>
    <type>Checkbox</type>
</CustomField>