objects/Sales_Order__c/fields/Charges_For_Labor__c.field-meta.xml
<CustomField>
    <fullName>Charges_For_Labor__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Charges For Labor</label>
    <type>Checkbox</type>
</CustomField>