objects/Sales_Order__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>