objects/Sales_Order__c/fields/Client_Is_Responsible__c.field-meta.xml
<CustomField>
    <fullName>Client_Is_Responsible__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Client Is Responsible</label>
    <type>Checkbox</type>
</CustomField>