objects/Sales_Order__c/fields/ClonedFromRecordId__c.field-meta.xml
<CustomField>
    <fullName>ClonedFromRecordId__c</fullName>
    <label>ClonedFromRecordId</label>
    <length>30</length>
    <type>Text</type>
</CustomField>