objects/Sales_Order__c/fields/Close_Date__c.field-meta.xml
<CustomField>
    <fullName>Close_Date__c</fullName>
    <description>To track sales order close date</description>
    <label>Close Date</label>
    <type>Date</type>
</CustomField>