objects/Sales_Order__c/fields/CMR_Description__c.field-meta.xml
<CustomField>
    <fullName>CMR_Description__c</fullName>
    <label>Job Description</label>
    <length>80</length>
    <type>Text</type>
</CustomField>