objects/Sales_Order__c/fields/Contract_Name__c.field-meta.xml
<CustomField>
    <fullName>Contract_Name__c</fullName>
    <formula>Contract__r.Name</formula>
    <label>Contract Name</label>
    <type>Text</type>
</CustomField>