objects/Sales_Order__c/fields/Contract_Surcharge_Type__c.field-meta.xml
<CustomField>
    <fullName>Contract_Surcharge_Type__c</fullName>
    <formula>TEXT(Contract__r.Surcharge_Type__c)</formula>
    <label>Contract Surcharge Type</label>
    <type>Text</type>
</CustomField>