objects/Sales_Order__c/fields/Convert_Count__c.field-meta.xml
<CustomField>
    <fullName>Convert_Count__c</fullName>
    <label>Convert Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>