objects/Sales_Order__c/fields/Converted_to_Lightning__c.field-meta.xml
<CustomField>
    <fullName>Converted_to_Lightning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Converted to Lightning</label>
    <type>Checkbox</type>
</CustomField>