objects/Sales_Order__c/fields/Corporate_Account__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Account__c</fullName>
    <formula>Bill_to_Customer_No__r.Corporate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corporate Account</label>
    <type>Text</type>
</CustomField>