objects/Sales_Order__c/fields/Corporate_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Account_Name__c</fullName>
    <formula>Bill_to_Customer_No__r.Parent.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Corporate Account Name - Report</label>
    <type>Text</type>
</CustomField>