objects/Sales_Order__c/fields/Create_Site_Address__c.field-meta.xml
<CustomField>
    <fullName>Create_Site_Address__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create Site Address</label>
    <type>Checkbox</type>
</CustomField>