objects/Sales_Order__c/fields/Credit_Hold__c.field-meta.xml
<CustomField>
    <fullName>Credit_Hold__c</fullName>
    <formula>Bill_to_Customer_No__r.Credit_Hold__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credit Hold</label>
    <type>Checkbox</type>
</CustomField>