objects/Sales_Order__c/fields/Custom_Assumptions10__c.field-meta.xml
<CustomField>
    <fullName>Custom_Assumptions10__c</fullName>
    <label>Custom Assumption 10</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>