objects/Sales_Order__c/fields/Custom_Assumptions1__c.field-meta.xml
<CustomField>
    <fullName>Custom_Assumptions1__c</fullName>
    <label>Custom Assumption 1</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>