objects/Sales_Order__c/fields/Custom_Assumptions2__c.field-meta.xml
<CustomField>
    <fullName>Custom_Assumptions2__c</fullName>
    <label>Custom Assumption 2</label>
    <length>600</length>
    <type>LongTextArea</type>
</CustomField>