objects/Sales_Order__c/fields/Customer_PO_No__c.field-meta.xml
<CustomField>
    <fullName>Customer_PO_No__c</fullName>
    <label>Customer PO No.</label>
    <length>35</length>
    <type>Text</type>
</CustomField>