objects/Sales_Order__c/fields/Cylinders_Require_Evaluation__c.field-meta.xml
<CustomField>
    <fullName>Cylinders_Require_Evaluation__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Cylinders Require Evaluation</label>
    <type>Checkbox</type>
</CustomField>