objects/Sales_Order__c/fields/D365_Project_ID__c.field-meta.xml
<CustomField>
    <fullName>D365_Project_ID__c</fullName>
    <label>D365 Project ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>