objects/Sales_Order__c/fields/Daily_Rate__c.field-meta.xml
<CustomField>
    <fullName>Daily_Rate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Daily Rate</label>
    <type>Checkbox</type>
</CustomField>