objects/Sales_Order__c/fields/DataUpdateNote__c.field-meta.xml
<CustomField>
    <fullName>DataUpdateNote__c</fullName>
    <label>DataUpdateNote</label>
    <length>30</length>
    <type>Text</type>
</CustomField>