objects/Sales_Order__c/fields/Default_Billing_Rule_2023__c.field-meta.xml
<CustomField>
    <fullName>Default_Billing_Rule_2023__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Default_Billing_Rule_2023</label>
    <type>Checkbox</type>
</CustomField>