objects/Sales_Order__c/fields/Default_Billing_Rule_To_Display__c.field-meta.xml
<CustomField>
    <fullName>Default_Billing_Rule_To_Display__c</fullName>
    <label>Default_Billing_Rule_To_Display</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PortalBasisAdv</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>