objects/Sales_Order__c/fields/Director_PCReportRunner__c.field-meta.xml
<CustomField>
    <fullName>Director_PCReportRunner__c</fullName>
    <formula>IF
(
And($User.UserRoleId = '00E1V0000014rlO',
Project_Coordinator__r.User__r.UserRole.Id = '00E1V0000014rlY'),
true, false)

||

IF(
AND($User.UserRoleId = '00E1V0000014rlO',
Project_Coordinator__r.User__r.UserRole.Id ='00E000014rlY'),
true, false)

||

IF(
AND($User.UserRoleId = '00E1V0000014rls',
Project_Coordinator__r.User__r.UserRole.Id ='00E1V0000014rlx'),
true, false)

||
IF(
AND($User.UserRoleId = '00E1V0000014rls',
Project_Coordinator__r.User__r.UserRole.Id ='00E1V0000014rm2'),
true, false)

||

IF(
AND($User.UserRoleId = '00E1V0000014rld',
Project_Coordinator__r.User__r.UserRole.Id ='00E1V0000014rli'),
true, false)

||
IF(
AND($User.UserRoleId = '00E1V0000014rld',
Project_Coordinator__r.User__r.UserRole.Id ='00E1V0000014rln'),
true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Director_PCReportRunner</label>
    <type>Checkbox</type>
</CustomField>