objects/Sales_Order__c/fields/Disposal_Pricing__c.field-meta.xml
<CustomField>
    <fullName>Disposal_Pricing__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Disposal Pricing</label>
    <type>Checkbox</type>
</CustomField>