objects/Sales_Order__c/fields/Distance_to_Job_Site__c.field-meta.xml
<CustomField>
    <fullName>Distance_to_Job_Site__c</fullName>
    <label>Distance to Job Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>LESS_THAN_FORTY_MILES</fullName>
                <label>Less than 40 Miles</label>
            </value>
            <value>
                <fullName>GREATER_THAN_FORTY_MILES</fullName>
                <label>Greater than 40 Miles</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>