objects/Sales_Order__c/fields/Do_Not_Reset_Sync_Flag__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Reset_Sync_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Reset Sync Flag</label>
    <type>Checkbox</type>
</CustomField>