objects/Sales_Order__c/fields/Emergency_Sales_Order__c.field-meta.xml
<CustomField>
    <fullName>Emergency_Sales_Order__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Emergency Sales Order</label>
    <type>Checkbox</type>
</CustomField>