objects/Sales_Order__c/fields/EPA_ID__c.field-meta.xml
<CustomField>
    <fullName>EPA_ID__c</fullName>
    <label>EPA ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>