objects/Sales_Order__c/fields/EQAI_Billing_Project_Id__c.field-meta.xml
<CustomField>
    <fullName>EQAI_Billing_Project_Id__c</fullName>
    <label>EQAI Billing Project Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>