objects/Sales_Order__c/fields/EQAI_Billing_Project_Name__c.field-meta.xml
<CustomField>
    <fullName>EQAI_Billing_Project_Name__c</fullName>
    <label>EQAI Billing Project Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>