objects/Sales_Order__c/fields/EQAI_Response__c.field-meta.xml
<CustomField>
    <fullName>EQAI_Response__c</fullName>
    <label>EQAI Response</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>