objects/Sales_Order__c/fields/EqaiGeneratorId__c.field-meta.xml
<CustomField>
    <fullName>EqaiGeneratorId__c</fullName>
    <label>EqaiGeneratorId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>