objects/Sales_Order__c/fields/Estimated_Job_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Job_End_Date__c</fullName>
    <label>Estimated Job End Date</label>
    <type>Date</type>
</CustomField>