objects/Sales_Order__c/fields/Estimated_Job_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Job_End_Time__c</fullName>
    <label>Estimated Job End Time</label>
    <type>Time</type>
</CustomField>