objects/Sales_Order__c/fields/Excluded_From_NAV_Integration__c.field-meta.xml
<CustomField>
    <fullName>Excluded_From_NAV_Integration__c</fullName>
    <formula>Service_Center__r.Exclude_Sales_Orders_SF_Nav_Integration__c</formula>
    <label>Excluded From NAV Integration</label>
    <type>Checkbox</type>
</CustomField>