objects/Sales_Order__c/fields/Expendables__c.field-meta.xml
<CustomField>
    <fullName>Expendables__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Expendables</label>
    <type>Checkbox</type>
</CustomField>