objects/Sales_Order__c/fields/Expiration_Date__c.field-meta.xml
<CustomField>
    <fullName>Expiration_Date__c</fullName>
    <formula>Estimated_Job_Start_Date__c + 63</formula>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>