objects/Sales_Order__c/fields/Expired__c.field-meta.xml
<CustomField>
    <fullName>Expired__c</fullName>
    <formula>IF(TEXT(Document_Type__c) == 'Sales Order', false,
IF(Expiration_Date__c == NULL, false,
IF(Expiration_Date__c &lt; TODAY(), true, false)))</formula>
    <label>Expired</label>
    <type>Checkbox</type>
</CustomField>