objects/Sales_Order__c/fields/Fax_No__c.field-meta.xml
<CustomField>
    <fullName>Fax_No__c</fullName>
    <label>Fax No.</label>
    <type>Phone</type>
</CustomField>