objects/Sales_Order__c/fields/First_Hour_Of_Loading__c.field-meta.xml
<CustomField>
    <fullName>First_Hour_Of_Loading__c</fullName>
    <defaultValue>true</defaultValue>
    <label>First Hour Of Loading</label>
    <type>Checkbox</type>
</CustomField>