objects/Sales_Order__c/fields/Free_Access__c.field-meta.xml
<CustomField>
    <fullName>Free_Access__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Free Access</label>
    <type>Checkbox</type>
</CustomField>