objects/Sales_Order__c/fields/From_Sales_Quote__c.field-meta.xml
<CustomField>
    <fullName>From_Sales_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Sales Quote</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>Sales_Order__c.Service_Center__c</field>
            <operation>equals</operation>
            <valueField>$Source.Service_Center__c</valueField>
        </filterItems>
        <filterItems>
            <field>Sales_Order__c.Bill_to_Customer_No__c</field>
            <operation>equals</operation>
            <valueField>$Source.Bill_to_Customer_No__c</valueField>
        </filterItems>
        <filterItems>
            <field>Sales_Order__c.Document_Type__c</field>
            <operation>equals</operation>
            <value>Sales Quote</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Sales_Order__c</referenceTo>
    <relationshipLabel>Quotes/Orders</relationshipLabel>
    <relationshipName>Sales_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>