objects/Sales_Order__c/fields/Generate_Before_Final__c.field-meta.xml
<CustomField>
    <fullName>Generate_Before_Final__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Generate Before Final</label>
    <type>Checkbox</type>
</CustomField>