objects/Sales_Order__c/fields/Get_Next_Approver__c.field-meta.xml
<CustomField>
    <fullName>Get_Next_Approver__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Get Next Approver</label>
    <type>Checkbox</type>
</CustomField>