objects/Sales_Order__c/fields/In_The_Event__c.field-meta.xml
<CustomField>
    <fullName>In_The_Event__c</fullName>
    <defaultValue>true</defaultValue>
    <label>In The Event</label>
    <type>Checkbox</type>
</CustomField>