objects/Sales_Order__c/fields/Include_Holiday__c.field-meta.xml
<CustomField>
    <fullName>Include_Holiday__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Holiday</label>
    <type>Checkbox</type>
</CustomField>