objects/Sales_Order__c/fields/Include_Weekend__c.field-meta.xml
<CustomField>
    <fullName>Include_Weekend__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Include Weekend</label>
    <type>Checkbox</type>
</CustomField>