objects/Sales_Order__c/fields/Inter_Company_Job__c.field-meta.xml
<CustomField>
    <fullName>Inter_Company_Job__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inter-Company Job</label>
    <type>Checkbox</type>
</CustomField>