objects/Sales_Order__c/fields/Invoice_Of_Work__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Of_Work__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Invoice Of Work</label>
    <type>Checkbox</type>
</CustomField>