objects/Sales_Order__c/fields/Is_New_D365_Project__c.field-meta.xml
<CustomField>
    <fullName>Is_New_D365_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is New D365 Project</label>
    <type>Checkbox</type>
</CustomField>