objects/Sales_Order__c/fields/IsDataEqual__c.field-meta.xml
<CustomField>
    <fullName>IsDataEqual__c</fullName>
    <formula>Total_Profit_Pct__c ==  Total_Profit_Pct__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsDataEqual</label>
    <type>Checkbox</type>
</CustomField>