objects/Sales_Order__c/fields/JB_Sent_to_EQAI__c.field-meta.xml
<CustomField>
    <fullName>JB_Sent_to_EQAI__c</fullName>
    <defaultValue>false</defaultValue>
    <label>JB Sent to EQAI</label>
    <type>Checkbox</type>
</CustomField>