objects/Sales_Order__c/fields/Lab_Packs_Rate__c.field-meta.xml
<CustomField>
    <fullName>Lab_Packs_Rate__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Lab Packs Rate</label>
    <type>Checkbox</type>
</CustomField>