objects/Sales_Order__c/fields/Last_Quote_Email_Sent_By__c.field-meta.xml
<CustomField>
    <fullName>Last_Quote_Email_Sent_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Last Quote Email Sent By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes_Orders2</relationshipName>
    <type>Lookup</type>
</CustomField>