objects/Sales_Order__c/fields/Lump_Sum__c.field-meta.xml
<CustomField>
    <fullName>Lump_Sum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lump Sum</label>
    <type>Checkbox</type>
</CustomField>