objects/Sales_Order__c/fields/Lump_Sum_Line_Count__c.field-meta.xml
<CustomField>
    <fullName>Lump_Sum_Line_Count__c</fullName>
    <label>Lump Sum Line Count</label>
    <summaryFilterItems>
        <field>Sales_Line__c.Category__c</field>
        <operation>equals</operation>
        <value>Lump Sum</value>
    </summaryFilterItems>
    <summaryForeignKey>Sales_Line__c.Sales_Order__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>