objects/Sales_Order__c/fields/Manifest_And_Profile__c.field-meta.xml
<CustomField>
    <fullName>Manifest_And_Profile__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Manifest And Profile</label>
    <type>Checkbox</type>
</CustomField>