objects/Sales_Order__c/fields/Maximum_Weight__c.field-meta.xml
<CustomField>
    <fullName>Maximum_Weight__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Maximum Weight</label>
    <type>Checkbox</type>
</CustomField>